task_3-4/pgadmin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: pgadmin.local
      http:
        paths:        
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
